--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -14,7 +14,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.design.widget.BottomNavigationView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
