--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -16,7 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         android:layout_marginBottom="415dp"
-        android:src="@drawable/logolow"
+        android:src="@drawable/logo1"
         tools:ignore="ContentDescription" />
 
     <EditText
