--- a/app/src/main/res/layout/userprofile.xml
+++ b/app/src/main/res/layout/userprofile.xml
@@ -57,18 +57,20 @@
         android:inputType="textMultiLine"
         android:text="Bio" />
 
-    <GridView
-        android:layout_width="335dp"
-        android:layout_height="293dp"
+    <LinearLayout
+        android:layout_width="401dp"
+        android:layout_height="344dp"
+
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="69dp" >
 
-        <androidx.gridlayout.widget.GridLayout
+        android:layout_marginBottom="22dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/user_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.gridlayout.widget.GridLayout>
-    </GridView>
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+    </LinearLayout>
 
 </RelativeLayout>
