--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,8 +8,18 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.dailybucket.ui.home.HomeFragment"
+        android:name="com.example.dailybucket.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.example.dailybucket.UserProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/userprofile"/>
+    <fragment
+        android:id="@+id/navigation_search"
+        android:name="com.example.dailybucket.SearchFragment"
+        android:label="@string/search"
+        tools:layout="@layout/search"/>
 
 </navigation>
