--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:id="@+id/nvView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
+            android:gravity="bottom"
             app:menu="@menu/side_menu" />
     </androidx.drawerlayout.widget.DrawerLayout>
 
@@ -41,6 +41,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
         android:text="@string/title_home"
+        android:gravity="bottom"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,7 +56,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:isScrollContainer="false"
-        android:layout_gravity="bottom"
+        android:gravity="bottom"
         app:menu="@menu/navigation" />
 
 
