--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -19,7 +19,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginEnd="215dp"
         android:layout_marginRight="215dp"
-        android:layout_marginBottom="380dp"
+        android:layout_marginBottom="485dp"
         android:hint="@string/firstname"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
@@ -33,10 +33,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="215dp"
+
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="380dp"
+        android:layout_marginBottom="485dp"
         android:hint="@string/lastname"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
@@ -57,7 +57,7 @@
         android:layout_marginTop="9dp"
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
-        android:layout_marginBottom="307dp"
+        android:layout_marginBottom="400dp"
         android:hint="@string/email"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
@@ -78,7 +78,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginEnd="176dp"
         android:layout_marginRight="176dp"
-        android:layout_marginBottom="218dp"
+        android:layout_marginBottom="320dp"
         android:hint="@string/password1"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
@@ -96,7 +96,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginEnd="97dp"
         android:layout_marginRight="97dp"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="250dp"
         android:hint="@string/password2"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
@@ -118,7 +118,7 @@
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         android:layout_marginBottom="40dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:srcCompat="@drawable/register" />
 
     <ImageView
@@ -151,5 +151,22 @@
         android:layout_marginBottom="80dp"
         app:srcCompat="@drawable/blankp" />
 
+    <EditText
+        android:id="@+id/textView2"
+        android:layout_width="160dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="150dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginEnd="288dp"
+        android:layout_marginRight="288dp"
+        android:layout_marginBottom="571dp"
+        android:hint="@string/username"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColorHint="@color/colorBlack" />
 
 </RelativeLayout>
