--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -4,10 +4,10 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_menu_camera"
-        android:title="@string/menu_home" />
+        android:title="Settings" />
     <item
         android:id="@+id/nav_gallery"
         android:icon="@drawable/ic_menu_gallery"
-        android:title="@string/menu_gallery" />
+        android:title="LogOff" />
 
 </menu>
