--- a/app/src/main/res/layout/myposts_item.xml
+++ b/app/src/main/res/layout/myposts_item.xml
@@ -2,14 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/cardview_dark_background">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/mypost"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
         tools:src="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/mypost_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:textSize="30sp"
+        android:layout_marginBottom="10dp"
+        android:text="Post Title" />
+
+    <TextView
+        android:id="@+id/mypost_post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:textSize="15sp"
+        android:layout_gravity="top"
+        android:layout_marginBottom="30dp"
+        android:text="This is post body!" />
 
 </LinearLayout>
